fix scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+@media (max-width: 750px) {
+  body {
+    overflow: auto;
+  }
+}
